--- a/www/content/style/_custom.scss
+++ b/www/content/style/_custom.scss
@@ -15,9 +15,10 @@
 		}
 	}
 	.bg-image-2 {
-		background-image: url('../content/images/background-2.jpg');
+		background-image: url('../content/images/background-camping.jpg');
 		h1, p {
 			color: #fff;
+			text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7)
 		}
 	}
 	.bg-image-3 {
@@ -190,6 +191,10 @@ main.page-content {
 	img {
 		box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.25);
 	}
+}
+
+.thumbnail-variant-2 {
+	margin-bottom: 2em;
 }
 // Footer 
 //---------------------------------------------//
