--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9692,9 +9692,10 @@ html.boxed .page {
     color: #fff; }
 
 .page .bg-image-2 {
-  background-image: url("../content/images/background-2.jpg"); }
+  background-image: url("../content/images/background-camping.jpg"); }
   .page .bg-image-2 h1, .page .bg-image-2 p {
-    color: #fff; }
+    color: #fff;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); }
 
 .page .bg-image-3 {
   background-image: url("../content/images/background-3.jpg"); }
@@ -9796,6 +9797,9 @@ header.page-header .jumbotron p.big {
 /* Caravans */
 .camping img {
   box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.25); }
+
+.thumbnail-variant-2 {
+  margin-bottom: 2em; }
 
 footer.page-footer.dark .logoalt {
   max-width: 100px; }
