--- a/www/content/style/_custom.scss
+++ b/www/content/style/_custom.scss
@@ -92,11 +92,34 @@ h1, h2, h3, h4, h5, h6 {
 //---------------------------------------------//
 
 header.page-header {
-	.logo {
-		width: 260px;
+	
+	.logo-navbar {
+		width: 180px;
+		display: block;
 	}
+	.logo-header {
+		display: none;
+	}
+	.rd-navbar {
+		padding-top: 0;
+	}
+	.rd-navbar--is-stuck {
+		padding: 6px 0;
+		.logo-header {
+			display: block;
+			float: left;
+    		max-width: 280px;
+		}
+		ul li a {
+			padding: 16px 0;
+		}
+	}
+	
 	.rd-navbar-nav {
 
+		ul.rd-navbar-nav {
+			margin-top: 0;
+		}
 		a.booknow {
 			color: #fff;
 			font-size: 0.8em;
@@ -107,8 +130,19 @@ header.page-header {
 
 	.jumbotron {
 
+		.logo {
+			margin-top: 75px;
+			margin-bottom: 60px;
+			width: 344px;
+		}
 		h1 {
-			margin-bottom: 80px;
+			margin-bottom: 10px;
+			font-size: 48px;
+			color: #fff;
+		}
+		h2 {
+			color: #fff;
+			font-size: 50px;
 		}
 		p.big {
 			color: #fff;
@@ -118,7 +152,11 @@ header.page-header {
 }
 
 
-
+@media (min-width: 768px) {
+	header.page-header .logo-navbar {
+		display: none;
+	}
+}
 
 // Main Section 
 //---------------------------------------------//
@@ -126,6 +164,20 @@ header.page-header {
 main.page-content {
 
 }
+
+/* Welcome Section */
+
+@media (max-width: 768px) {
+	.welcome {
+		padding-top: 100px;
+		text-align: center !important;
+
+		.col-sm-6 {
+			padding-bottom: 20px;
+		}
+	}
+}
+
 
 /* Cabins */
 .cabins {
